* Version 0.6.1 (10.07.2016)
------------------------------------------------------------------------------------------
- fix crashes when battery/ac adapter was removed/plugged during suspend/hibernate
- fix battery/ac checks
- fix typo in debug mode
- minor fixes
- refactoring

* Version 0.5.2 (22.10.2015)
------------------------------------------------------------------------------------------
- add 'help_and_values_parser' module
- small bug fixes
- refactoring

* Version 0.5.1 (21.10.2015)
------------------------------------------------------------------------------------------
- add modules 'battery_monitor', 'battery_notifications' and 'read_battery_values'
- add config file for internal variables
- add config file for user parameters
- bug and type fixes
- refactoring

* Version 0.4.10 (20.10.2015)
------------------------------------------------------------------------------------------
- add support for suspend hybrid from pm-utils, from now this is default action on critical battery level
- drop support for upower dbus interface since is not supported
- small fixes

* Version 0.4.9 (27.05.2015)
------------------------------------------------------------------------------------------
- don't check twice if sox is installed
- add scripts to hibernate, suspend and shutdown, when upower or pm-utils aren't installed
- clean up
- refactoring
- bug fixes

* Version 0.4.7 (31.10.2014)
------------------------------------------------------------------------------------------
 - add default minimal level battery command
 - add list of screen lock programs, first one will be used as default
 - add shell scripts to hibernate, suspend and shutdown
 - logical fixes
 - small changes